# ProjectFlow

./: .gitignore  README.md  docker-compose.yaml
server/: .dockerignore  Dockerfile  auth.py  config.py  db.py  entrypoint.sh  logger.py  main.py  manage.py  pyproject.toml  requirements.txt  run.sh
server/apps/organization/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
server/apps/project/: admin.py  apps.py  forms.py  models.py  permissions.py  router.py  serializers.py  signals.py  views.py
server/apps/projects/: api.py  models.py  schemas.py
server/apps/user/: api.py  models.py  schemas.py  services.py
server/apps/users/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
server/config/: urls.py  wsgi.py
server/config/settings/: base.py  local.py  production.py
server/db/: base.py  config.py
server/db/models/: base.py  project.py  user.py
server/dockerfiles/dev/: Dockerfile
server/helpers/: email.py
server/libs/: helpers.py  response.py
server/migrations/: env.py
server/migrations/versions/: 096b3f0f0328_add_unique_hash_to_user.py  0eff92d758a8_update_user_model.py  19ce35344d23_remove_task_completed_at.py  7b480c261978_remove_task_status.py  a09d070b1842_add_task_start_due_dates.py  a18dbbd6b6b4_init.py  c17130c9f8c4_add_task_status.py  e7da999eeee0_init.py  (+4 more)
server/projects/: api.py  models.py  router.py  schemas.py
server/requirements/: local.txt
server/services/: create_excel.py  email.py
server/user/: api.py  models.py  router.py  schemas.py  services.py
(+98 files in other folders)
