[tool.poetry]
name = "server"
version = "0.1.0"
description = "API for Task Management"
authors = ["Utkarsh Nawalgaria <utkarsh.n@olivecloud.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
black = "^22.8.0"
python-dotenv = "^0.21.0"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
